--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "845376c8",
+   "id": "45b0492b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc62f3b9",
+   "id": "e8c03d00",
    "metadata": {},
    "source": [
     "# Data preprocessing"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c60fd553",
+   "id": "3d0e11dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8bebc8cd",
+   "id": "0d321bd7",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0ab12ead",
+   "id": "39b2c916",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35cb8293",
+   "id": "0e99a9bc",
    "metadata": {},
    "source": [
     "## Label Encoding the \"Gender\" column"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6113e185",
+   "id": "a208d73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "36336552",
+   "id": "e3e8c88d",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699e0f49",
+   "id": "9f3480a5",
    "metadata": {},
    "source": [
     "## One Hot Encoding the \"Geography\" column"
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ff709f22",
+   "id": "9513493f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5a3cf1fe",
+   "id": "5f936fb6",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ace596d",
+   "id": "15826e45",
    "metadata": {},
    "source": [
     "## Splitting the dataset"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "83a26afd",
+   "id": "dc5bd796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b873fb34",
+   "id": "c77bc30c",
    "metadata": {},
    "source": [
     "## Feature Scaling"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "66a4b6da",
+   "id": "a1a9155a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "822ea545",
+   "id": "57300c05",
    "metadata": {},
    "source": [
     "# Building the ANN"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f7df401e",
+   "id": "ff7c38b6",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a0ded95c",
+   "id": "f6b1dc33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "07ef75cc",
+   "id": "e375f46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "33d7de90",
+   "id": "ff6dda2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72cb7ac7",
+   "id": "d8e802af",
    "metadata": {},
    "source": [
     "# Training the ANN"
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "557136f0",
+   "id": "34fb9232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cc8a3c87",
+   "id": "bfe9f1f7",
    "metadata": {},
    "outputs": [
     {
@@ -513,14 +513,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4466a173",
+   "metadata": {},
+   "source": [
+    "# Predict test set result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3f5bb7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 0s 641us/step\n",
+      "[[0 0]\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = ann.predict(X_test)\n",
+    "y_pred = (y_pred > 0.5)\n",
+    "print(np.concatenate((y_pred.reshape(len(y_pred),1), y_test.reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c52ee7",
+   "metadata": {},
+   "source": [
+    "# Confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0b69dac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1524   71]\n",
+      " [ 204  201]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8625"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed33fd75",
+   "id": "d06a2238",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
   }
  ],
  "metadata": {
